syntax = "proto3";

package greetpb;
option go_package="greetpb";



message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}


message GreetResponse{
    string result = 1;
}

message GreetManyTimesRequest{
    string greeting = 1;
}

message GreetManyTimesResponse{
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}


message GreetEveryOneRequest{
    string greeting = 1;
}

message GreetEveryOneResponse{
    string result = 1;
}

service GreetService{
    // Unary
   rpc Greet(GreetRequest) returns (GreetResponse) {};
   // Server Streaming
   rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
   // Client Streaming
   rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

   rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {};
}
